<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/icon_person"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_person"
        android:contentDescription="@string/description_person_icon"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/roboto_variable"
        android:text="@string/title_home"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/wallet_button"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/black"
        android:text="@string/label_wallet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon_person" />

    <Button
        android:id="@+id/savings_button"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/black"
        android:text="@string/label_savings"
        app:layout_constraintStart_toEndOf="@+id/wallet_button"
        app:layout_constraintTop_toBottomOf="@+id/icon_person" />

    <Button
        android:id="@+id/credit_button"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/black"
        android:text="@string/label_credit"
        app:layout_constraintStart_toEndOf="@+id/savings_button"
        app:layout_constraintTop_toBottomOf="@+id/icon_person" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="329dp"
        android:layout_height="180dp"
        android:layout_marginTop="12dp"
        app:cardCornerRadius="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/savings_button">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="180dp">

            <TextView
                android:id="@+id/balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="28dp"
                android:fontFamily="@font/roboto_variable"
                android:text="@string/label_balance_value"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/roboto_variable"
                android:text="@string/label_balance"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/balance" />

            <Button
                android:id="@+id/button4"
                android:layout_width="124dp"
                android:layout_height="48dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="120dp"
                android:fontFamily="@font/roboto_variable"
                android:backgroundTint="@color/black"
                android:text="@string/label_cash_in"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button5"
                android:layout_width="124dp"
                android:layout_height="48dp"
                android:layout_marginStart="28dp"
                android:backgroundTint="@color/black"
                android:layout_marginTop="120dp"
                android:text="@string/label_send"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/button4"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="44dp"
        android:background="@color/title_color"
        app:cardCornerRadius="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/description_bank_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/icon_bank" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_variable"
        android:textAlignment="center"
        android:text="@string/label_bank_transfer"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/roboto_variable"
        android:gravity="center"
        android:text="@string/label_card"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/cardView3" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="44dp"
        android:background="@color/title_color"
        app:cardCornerRadius="16dp"
        app:layout_constraintStart_toEndOf="@id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/description_card_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/icon_card" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="44dp"
        android:background="@color/title_color"
        app:cardCornerRadius="16dp"
        app:layout_constraintStart_toEndOf="@id/cardView3"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/description_stocks_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/icon_stocks" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/roboto_variable"
        android:gravity="center"
        android:text="@string/label_stocks"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/cardView4" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView5"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="44dp"
        android:background="@color/title_color"
        app:cardCornerRadius="16dp"
        app:layout_constraintStart_toEndOf="@id/cardView4"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/description_load_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/icon_load" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/roboto_variable"
        android:gravity="center"
        android:text="@string/label_load"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/cardView5" />

    <androidx.cardview.widget.CardView
        android:layout_width="320dp"
        android:layout_height="206dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="168dp"
        app:cardCornerRadius="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title_transaction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="28dp"
                android:fontFamily="@font/roboto_variable"
                android:text="@string/label_transactions"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:scrollbars="none"
                android:fadingEdge="none"
                app:layout_constraintTop_toBottomOf="@+id/title_transaction"
                app:layout_constraintBottom_toBottomOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/example_transaction1"
                        android:fontFamily="@font/roboto_variable"
                        android:textSize="14sp"
                        android:layout_marginStart="20dp"
                        android:padding="4dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/example_transaction2"
                        android:fontFamily="@font/roboto_variable"
                        android:textSize="14sp"
                        android:layout_marginStart="20dp"
                        android:padding="4dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/example_transaction3"
                        android:fontFamily="@font/roboto_variable"
                        android:textSize="14sp"
                        android:layout_marginStart="20dp"
                        android:padding="4dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/example_transaction4"
                        android:fontFamily="@font/roboto_variable"
                        android:textSize="14sp"
                        android:layout_marginStart="20dp"
                        android:padding="4dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/example_transaction5"
                        android:fontFamily="@font/roboto_variable"
                        android:textSize="14sp"
                        android:layout_marginStart="20dp"
                        android:padding="4dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/example_transaction6"
                        android:fontFamily="@font/roboto_variable"
                        android:textSize="14sp"
                        android:layout_marginStart="20dp"
                        android:padding="4dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/example_transaction7"
                        android:fontFamily="@font/roboto_variable"
                        android:textSize="14sp"
                        android:layout_marginStart="20dp"
                        android:padding="4dp" />

                </LinearLayout>

            </ScrollView>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>